# ferx-nlme

./: .gitignore  2cpt_iv-fit.yaml  2cpt_iv-sdtab.csv  2cpt_iv-timing.txt  2cpt_oral-fit.yaml  2cpt_oral-sdtab.csv  2cpt_oral-timing.txt  404.html  CLAUDE.md  Cargo.toml  LICENSE  README.md  SDLC.md  TASK.md  build.rs  cli.html  data-format.html  faq.html  getting-started.html  index.html  installation.html  introduction.html  output.html  print.html  quick-start.html  rustc-ice-2026-04-15T17_25_44-15915.txt  rustc-ice-2026-04-15T17_25_50-15959.txt  rustc-ice-2026-04-15T17_25_56-16020.txt  rustc-ice-2026-04-15T17_26_22-16339.txt  searchindex.js  searchindex.json  two_cpt_iv-fit.yaml  two_cpt_iv-sdtab.csv  two_cpt_oral_cov-fit.yaml  two_cpt_oral_cov-sdtab.csv  warfarin-fit.yaml  warfarin-sdtab.csv  warfarin-timing.txt  warfarin_saem-fit.yaml  warfarin_saem-sdtab.csv  (+1 more)
.github/: PULL_REQUEST_TEMPLATE.md
api/: fitting.html  index.html  parsing.html  simulation.html  types.html
data/: mm_oral.csv  two_cpt_iv.csv
docs/: book.toml  mathjax-config.js
estimation/: foce.html  gauss-newton.html  index.html  iov.html  saem.html  sir.html
examples/: bloq.html  covariates.html  index.html  iov.html  mm_oral.ferx  ode-model.html  one-cpt-oral.html  three_cpt_iv.ferx  two-cpt-iv.html  two_cpt_iv.ferx  two_cpt_oral_cov.ferx  warfarin-bloq.ferx  warfarin.ferx  warfarin_block_omega.ferx  warfarin_bobyqa.ferx  warfarin_fix.ferx  warfarin_if.ferx  warfarin_iov.ferx  warfarin_saem.ferx  warfarin_trust_region.ferx
model-file/: error-model.html  fit-options.html  index.html  (+5 more)
(+142 files in other folders)
