[package]
name = "ferx-nlme"
version = "0.1.0"
edition = "2021"
description = "Nonlinear Mixed Effects modeling engine with FOCE/FOCEI estimation"
license = "MIT"
authors = ["InsightRX, Inc."]
repository = "https://github.com/InsightRX/ferx-nlme"
readme = "README.md"

[[bin]]
name = "ferx"
path = "src/bin/run_model.rs"

[features]
default = ["autodiff"]
autodiff = []
ci = []  # Allows building without autodiff for CI (nightly, no Enzyme)

[dependencies]
nalgebra = "0.33"
csv = "1.3"
serde = { version = "1", features = ["derive"] }
rayon = "1.10"
rand = "0.8"
rand_distr = "0.4"
regex = "1.11"
thiserror = "2"
nlopt = "0.8"

[dev-dependencies]
approx = "0.5"

[profile.release]
lto = "fat"
